--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Airi.js Testing</title>
+	<link rel="stylesheet" type="text/css" href="./bulma.css">
 </head>
 <body>
 	<div id="app"></div>
